--- a/RADJI_DINGUIR_BANAT.ipynb
+++ b/RADJI_DINGUIR_BANAT.ipynb
@@ -4504,7 +4504,8 @@
    "id": "f1afafa1",
    "metadata": {},
    "source": [
-    "Une **Random Forest** (Forêt d'arbres de décision) est une technique qui fait partie des **méthodes d'ensemble**. Elle qui combine :<br>\n",
+    "Un **Random Forest** (Forêt d'arbres de décision) est une technique qui fait partie des **méthodes d'ensemble**.<br>\n",
+    "Elle combine :<br>\n",
     "- **Les arbres de décision**<br>\n",
     "- **Le Bagging**<br>\n",
     "\n",
@@ -4527,11 +4528,11 @@
    "id": "19fef310",
    "metadata": {},
    "source": [
-    "Nous allons réitérer les mêmes étapes que pour le modèle précédent. Récapitulons les étapes :\n",
+    "Nous allons réitérer les mêmes étapes que pour le modèle précédent. Rappelons les étapes :\n",
     "1. Entraînement du modèle sur les données d'apprentissage.\n",
     "2. Prédiction sur les données de validations et d'apprentissage selon différentes combinaisons d'hyperparamètres.\n",
     "3. Choix du modèle selon les résultats obtenus lors de l'étape 2.\n",
-    "4. Entraînement du modèles sur les données d'apprentissage et de validation.\n",
+    "4. Entraînement du modèle sur les données d'apprentissage et de validation.\n",
     "5. Prédiction finale sur les données test."
    ]
   },
@@ -4548,9 +4549,9 @@
    "id": "6939fe15",
    "metadata": {},
    "source": [
-    "Il y a beaucoup plus d'**hyperparamètres** pour une modèle RandomForest qu'un modèle Ridge, nous allons donc optimiser plus d'hyperparamètres (pas tous parce qu'il y en a quand même beaucoup).\n",
+    "Il y a beaucoup plus d'**hyperparamètres** pour un modèle RandomForest qu'un modèle Ridge, nous allons donc optimiser plus d'hyperparamètres (pas tous car il y en a quand même beaucoup).\n",
     "\n",
-    "Voici la liste des hyperparamètres et les combinaisons de ces hyperparammètres que nous allons tester :<br>\n",
+    "Voici la liste des hyperparamètres que nous allons tester :<br>\n",
     "- **max_depth**<br>\n",
     "- **min_samples_split**<br>\n",
     "- **min_samples_leaf**"
@@ -4561,9 +4562,8 @@
    "id": "97ee66e7",
    "metadata": {},
    "source": [
-    "Le paramètre **max_depth** de Random Forest définit la **profondeur maximale** des arbres de décision dans l'ensemble. Plus la profondeur des arbres est grande, plus le modèle peut être complexe et mieux il peut s'adapter aux données, mais cela augmente également le risque de surapprentissage. Un modèle qui surapprend les données de formation peut ne pas généraliser correctement aux nouvelles données et ainsi avoir de moins bonnes performances sur l'ensemble de test ou sur des données en production.\n",
-    "\n",
-    "Le paramètre **max_depth** peut être utilisé pour contrôler la complexité du modèle en limitant la profondeur des arbres. Une valeur plus petite signifie que les arbres seront plus simples et que le modèle sera moins complexe. Cela peut aider à prévenir le **surapprentissage** et à améliorer la généralisation du modèle."
+    "Le paramètre **max_depth** de Random Forest définit la **profondeur maximale** des arbres de décision dans l'ensemble. Plus la profondeur des arbres est grande, plus le modèle peut être complexe et mieux il peut s'adapter aux données, mais cela augmente également le risque de surapprentissage. Un modèle qui surapprend les données de formation peut ne pas généraliser correctement aux nouvelles données et ainsi avoir de moins bonnes performances sur l'ensemble de test ou sur des données en production.  \n",
+    "Ainsi **max_depth** peut être utilisé pour contrôler la complexité du modèle en limitant la profondeur des arbres. Une valeur plus petite signifie que les arbres seront plus simples et que le modèle sera moins complexe. Cela peut aider à prévenir le **surapprentissage** et à améliorer la généralisation du modèle."
    ]
   },
   {
@@ -4861,7 +4861,7 @@
    "id": "f45b6d19",
    "metadata": {},
    "source": [
-    "Regardons ce que notre prédiction donne."
+    "Regardons ce que notre prédiction donne:"
    ]
   },
   {
@@ -4883,7 +4883,7 @@
    ],
    "source": [
     "plt.figure(figsize=(10,5))\n",
-    "plt.plot(df_true.loc[df_true[-test_start:].index[0]:,'y_pred_rf'], color=\"blue\", label=\"Prédiction Random Forest on test set\", lw=2)\n",
+    "plt.plot(df_true.loc[df_true[-test_start:].index[0]:,'y_pred_rf'], color=\"blue\", label=\"Prediction Random Forest on test set\", lw=2)\n",
     "plt.plot(df_true.loc[df_true[-test_start:].index[0]:,'nb_validation'], color=\"red\", alpha=0.4, label=\"Valeurs réelles\", lw=2)\n",
     "plt.xlabel(\"Date\")\n",
     "plt.ylabel(\"Nombre de validation\")\n",
@@ -4898,9 +4898,9 @@
    "id": "3aa79577",
    "metadata": {},
    "source": [
-    "Le modèle Random Forest semble également respecter les saisonnalités hebdomadaire. De plus, nous notons une chute claire du nombre de validation pendant les Grandes Vacances, ce qui montre que les saisonnaltés vacancières semble aussi avoir été respectées.\n",
+    "Le modèle Random Forest semble également capturer les schémas de saisonnalité hebdomadaire présents dans les données. De plus, nous avons observé une baisse significative du nombre de validations pendant les grandes vacances, ce qui indique que les schémas de saisonnalité liés aux vacances ont également été pris en compte.\n",
     "\n",
-    "Cependant, tout comme le modèle Ridge vu précédemment, la période de Covid n'a pas été prise en compte. "
+    "Cependant, il est important de noter que tout comme le modèle Ridge examiné précédemment, le modèle Random Forest n'a pas pris en compte la période de la pandémie de Covid."
    ]
   },
   {
@@ -4922,8 +4922,8 @@
    ],
    "source": [
     "plt.figure(figsize=(10,5))\n",
-    "plt.plot(df_true.loc[df_true[-test_start:].index[0]:,'y_pred_rf'], color=\"blue\", label=\"Prédiction Random Forest on test set\", lw=1)\n",
-    "plt.plot(df_true.loc[:df_true[-test_start:].index[0] - timedelta(1),'y_pred_rf'], color=\"green\", alpha=0.6, label=\"Prédiction Ridge on train set\", lw=1)\n",
+    "plt.plot(df_true.loc[df_true[-test_start:].index[0]:,'y_pred_rf'], color=\"blue\", label=\"Prediction Random Forest on test set\", lw=1)\n",
+    "plt.plot(df_true.loc[:df_true[-test_start:].index[0] - timedelta(1),'y_pred_rf'], color=\"green\", alpha=0.6, label=\"Prediction Ridge on train set\", lw=1)\n",
     "plt.plot(df_true.loc[:,'nb_validation'], color=\"red\", alpha=0.4, label=\"Valeurs réelles\", lw=1)\n",
     "plt.xlabel(\"Date\")\n",
     "plt.ylabel(\"Nombre de validation\")\n",
@@ -4938,7 +4938,9 @@
    "id": "49d1016c",
    "metadata": {},
    "source": [
-    "Dans ce modèle également un sur-apprentissage a clairement lieu. De plus, il semblerait que le nombre de validation ne puisse pas dépasser une limite inférieure (autour de 350 000 validations) que ce soit dans la prédiction des données d'entraînement ou de test. "
+    "Dans ce modèle, nous avons observé un phénomène de sur-apprentissage. Cela signifie que le modèle s'est trop adapté aux données d'entraînement spécifiques et n'a pas généralisé de manière optimale aux nouvelles données.\n",
+    "\n",
+    "De plus, nous avons remarqué une limite inférieure apparente pour le nombre de validations, qui se situe autour de 350 000 validations. Que ce soit lors de la prédiction des données d'entraînement ou des données de test, le modèle semble avoir du mal à prédire des valeurs inférieures à cette limite."
    ]
   },
   {
@@ -4964,9 +4966,9 @@
    "source": [
     "Dans cette partie nous allons voir une autre **méthode d'ensemble** : le **boosting**.<br>\n",
     "<br>\n",
-    "*Principe* : Cette fois-ci, les algorithmes ne sont plus indépendants comme pour la Random Forest, au contraire, chaque \"weak learner\" est entrainé pour **corriger les erreurs** du \"weak learner\" précédent.<br>\n",
+    "*Principe* : Cette fois-ci, les algorithmes ne sont plus indépendants comme pour le Random Forest, au contraire, chaque \"weak learner\" est entrainé pour **corriger les erreurs** du \"weak learner\" précédent.<br>\n",
     "Le boosting travaille de manière **séquentielle**.<br><br><br>\n",
-    "<img src=\"boosting.png\" width=600 height=\"400\"/>\n",
+    "<img src=\"images/boosting.png\" width=600 height=\"400\"/>\n",
     "<br><br><br>\n",
     "La principale différence entre les différents algorithmes de boosting (par exemple XGboost, Gradient boosting, AdaBoost, ...) est la façon dont ils déterminent les **lacunes** des weak learners.<br>\n",
     "<br>\n",
@@ -5010,7 +5012,7 @@
    "id": "40400993",
    "metadata": {},
    "source": [
-    "Comme pour le modèle Random Forest, il y a beaucoup de paramètre à optimiser."
+    "Comme pour le modèle Random Forest, il y a beaucoup de paramètres à optimiser."
    ]
   },
   {
@@ -5018,10 +5020,10 @@
    "id": "7b182a08",
    "metadata": {},
    "source": [
-    "Voici la liste des hyperparamètres et les combinaisons de ces hyperparammètres que nous allons tester :<br>\n",
+    "Voici la liste des hyperparamètres que nous allons tester :<br>\n",
     "- **max_depth**<br>\n",
-    "- **min_samples_split**<br>\n",
-    "- **min_samples_leaf**"
+    "- **subsample**<br>\n",
+    "- **gamma**"
    ]
   },
   {
@@ -5363,7 +5365,7 @@
    "id": "90e8f631",
    "metadata": {},
    "source": [
-    "Le modèle XGBoost semble respecter les saisonnalités hebdomadaires, cependant les saisonnalités vacancières sont moins évidentes."
+    "Le modèle XGBoost semble capturer les schémas de saisonnalité hebdomadaire présents dans les données. Cependant, nous avons remarqué que les saisonnalités liées aux vacances sont moins évidentes dans les prédictions du modèle."
    ]
   },
   {
@@ -5390,7 +5392,7 @@
     "plt.plot(df_true.loc[:,'nb_validation'], color=\"red\", alpha=0.4, label=\"Valeurs réelles\", lw=1)\n",
     "plt.xlabel(\"Date\")\n",
     "plt.ylabel(\"Nombre de validation\")\n",
-    "plt.legend()\n",
+    "Tout comme les modèles précédents, nous avons également observé un problème de sur-apprentissage dans ce modèle. plt.legend()\n",
     "\n",
     "plt.savefig('Prédiction XGBoost.pdf', dpi=1000, bbox_inches='tight')\n",
     "plt.show()"
@@ -5401,7 +5403,9 @@
    "id": "70076110",
    "metadata": {},
    "source": [
-    "Tout comme les modèles précédents, un sur-apprentissage est à constater. De plus, tout comme le modèle Random Forest, le nombre de validation, sur les données d'entraînements et de test, ne dépasse pas une limite inférieure (autour de 350 000 validations)."
+    "Tout comme les modèles précédents, nous avons également observé un problème de sur-apprentissage dans ce modèle. \n",
+    "\n",
+    "De plus, nous avons constaté que, tout comme le modèle Random Forest, le nombre de validations ne dépasse pas une limite inférieure, qui se situe autour de 350 000 validations, aussi bien dans les données d'entraînement que dans les données de test."
    ]
   },
   {
@@ -5430,7 +5434,7 @@
     "La disparition du gradient est un problème qui se produit lors de l'entraînement de réseaux de neuronnes traditionnels où les gradients des paramètres par rapport à la fonction de perte disparaissent exponentiellement avec le nombre de couches ou le nombre de pas de temps. Cela rend difficile pour le réseau d'apprendre des dépendances à long terme.<br>\n",
     "<br>\n",
     "Les LSTM résolvent ce problème en introduisant des cellules de mémoire, des portes d'entrée, des portes de sortie et des portes d'oubli, qui permettent au réseau de sélectionner les informations à mémoriser ou à oublier des pas de temps précédents. Cela rend possible pour les LSTM d'apprendre des dépendances à long terme et de faire des prédictions en se basant sur des informations provenant de longues périodes de temps passées.\n",
-    "<img src=\"lstm.png\" width=600 height=\"400\"/>\n",
+    "<img src=\"images/lstm.png\" width=600 height=\"400\"/>\n",
     "\n",
     "Le rôle des **trois portes** :\n",
     "- la **porte d'entrée** décide si l'entrée doit modifier le contenu de la cellule.\n",
@@ -5451,9 +5455,13 @@
    "id": "1faf4031",
    "metadata": {},
    "source": [
-    "Les données d'entrées d'un modèle LSTM nécéssite d'être à 3 dimensions et non à 2. Plus précisément, la taille des données d'entrées doit être (samples, time_step, features) où samples désigne le nombre de données que nous avons, time_step désigne le nomre de données historisées dont nous avons besoins pour prédire une données à un instant t et enfin features désigne le nombre de variables de départ que nous avons à notre disposition. \n",
+    "Pour utiliser un modèle LSTM, les données d'entrée doivent être organisées sous la forme d'un tableau à trois dimensions au lieu de deux. Plus précisément, la taille des données d'entrée doit être de la forme (samples, time_step, features), où :\n",
     "\n",
-    "Ainsi, nous devons redéfinir la taille de nos données d'entrées. Faisons donc le nécessaire !"
+    "- **samples** représente le nombre de données dont nous disposons dans notre ensemble.\n",
+    "- **time_step** correspond au nombre données historisées dont nous avons besoin pour prédire une donnée à un instant t.\n",
+    "- **features** indique le nombre de variables initiales que nous avons à notre disposition pour l'apprentissage.\n",
+    "\n",
+    "Ainsi, nous devons redéfinir la taille de nos données d'entrée."
    ]
   },
   {
@@ -5821,7 +5829,7 @@
    ],
    "source": [
     "plt.figure(figsize=(10,5))\n",
-    "plt.plot(df_true.loc[df_true[-test_start:].index[0]:,'y_pred_lstm'], color=\"blue\", label=\"Prédiction LSTM on test set\", lw=2)\n",
+    "plt.plot(df_true.loc[df_true[-test_start:].index[0]:,'y_pred_lstm'], color=\"blue\", label=\"Prediction LSTM on test set\", lw=2)\n",
     "plt.plot(df_true.loc[df_true[-test_start:].index[0]:,'nb_validation'], color=\"red\", alpha=0.4, label=\"Valeurs réelles\", lw=2)\n",
     "plt.xlabel(\"Date\")\n",
     "plt.ylabel(\"Nombre de validation\")\n",
@@ -5836,9 +5844,10 @@
    "id": "ea307807",
    "metadata": {},
    "source": [
-    "Ici également, les saisonnalités hebdomadaires semblent être respectées. Les saisonnalités vacancières semblent quant à elle moins évidents. \n",
+    "Dans ce modèle également, nous avons observé le respect des schémas de saisonnalité hebdomadaires dans les prévisions. Cependant, les variations saisonnières liées aux vacances sont moins évidentes dans les résultats.\n",
     "\n",
-    "En revanche, nous constatons l'arrivée d'une nouvelle tendance à partir d'Octobre 2021. Cependant, cette nouvelle tendance ne coïncide pas avec la tendance liée au Covid et ses restrictions."
+    "Cependant, une observation intéressante est l'apparition d'une nouvelle tendance à partir de septembre 2021. \n",
+    "Cette tendance ne semble pas être directement liée à la période de la pandémie de Covid et à ses restrictions."
    ]
   },
   {
@@ -5876,7 +5885,11 @@
    "id": "efb145e0",
    "metadata": {},
    "source": [
-    "Le modèle LSTM semble bien s'adapter aux données d'entraînement mais pas aux données de test, ce qui suggère ici aussi un sur-apprentissage."
+    "Comme pour les modèles précédents, nous avons également observé dans ce modèle LSTM une bonne adaptation aux données d'entraînement, mais une performance moins convaincante sur les données de test. Cette disparité entre les performances sur les deux ensembles de données indique clairement un problème de sur-apprentissage.\n",
+    "\n",
+    "En revanche, ce modèle LSTM parvient à mettre en évidence certaines tendances qui n'ont pas été prises en compte par les autres modèles précédemment étudiés.\n",
+    "\n",
+    "Grâce à sa capacité à capturer les dépendances temporelles à long terme, le modèle LSTM est capable de détecter des schémas et des tendances plus complexes dans les données. "
    ]
   },
   {
